feat: 批量插入seats
