# booking-sys/docs/swagger.json
@@ -10,6 +10,42 @@
     "host": "localhost:5000",
     "basePath": "/v1/api",
     "paths": {
+        "/admin/seats/batch": {
+            "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "批量插入座位表",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Theaters"
+                ],
+                "summary": "批量插入座位表",
+                "parameters": [
+                    {
+                        "description": "seats batch insert param",
+                        "name": "json",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.batchInsertSeatsRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
         "/admin/theaters": {
             "get": {
                 "security": [
@@ -122,17 +158,28 @@
                 }
             }
         },
+        "main.batchInsertSeatsRequest": {
+            "type": "object"
+        },
         "main.loginUserRequest": {
             "type": "object",
             "required": [
-                "code",
+                "login_type",
                 "phone_number"
             ],
             "properties": {
                 "code": {
-                    "type": "integer",
-                    "maximum": 9999,
-                    "minimum": 1000
+                    "type": "integer"
+                },
+                "login_type": {
+                    "type": "string",
+                    "enum": [
+                        "CODE",
+                        "PASS"
+                    ]
+                },
+                "password": {
+                    "type": "string"
                 },
                 "phone_number": {
                     "type": "string"
